data/derived/fa15/progs/unify/prog2166.ml.out
Characters 147-165:
  if r = 0 then buildSine (build(rand, d-1))
                          ^^^^^^^^^^^^^^^^^^
Error: This expression has type unit -> expr
       but an expression was expected of type expr
